src/字句解析/Hack/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement statements
Rule 2     statements -> empty
Rule 3     empty -> <empty>
Rule 4     statement -> a_instruction
Rule 5     statement -> l_instruction
Rule 6     statement -> c_instruction
Rule 7     a_instruction -> AT SYMBOL
Rule 8     a_instruction -> AT NUMBER
Rule 9     l_instruction -> LPAREN SYMBOL RPAREN
Rule 10    c_instruction -> dest EQUAL comp SEMI jump
Rule 11    c_instruction -> comp SEMI jump
Rule 12    c_instruction -> dest EQUAL comp
Rule 13    c_instruction -> comp
Rule 14    dest -> AMD
Rule 15    dest -> ADM
Rule 16    dest -> AD
Rule 17    dest -> AM
Rule 18    dest -> MD
Rule 19    dest -> DM
Rule 20    dest -> A
Rule 21    dest -> M
Rule 22    dest -> D
Rule 23    comp -> registers
Rule 24    comp -> registerNum
Rule 25    comp -> registerFunc
Rule 26    comp -> register
Rule 27    comp -> num
Rule 28    registers -> register PLUS register
Rule 29    registers -> register MINUS register
Rule 30    registers -> register AND register
Rule 31    registers -> register OR register
Rule 32    registerFunc -> NOT register
Rule 33    registerFunc -> MINUS register
Rule 34    registerNum -> register PLUS num
Rule 35    registerNum -> register MINUS num
Rule 36    num -> NUMBER
Rule 37    num -> MINUS NUMBER
Rule 38    register -> A
Rule 39    register -> M
Rule 40    register -> D
Rule 41    jump -> JGT
Rule 42    jump -> JEQ
Rule 43    jump -> JGE
Rule 44    jump -> JLT
Rule 45    jump -> JNE
Rule 46    jump -> JLE
Rule 47    jump -> JMP

Terminals, with rules where they appear

A                    : 20 38
AD                   : 16
ADM                  : 15
AM                   : 17
AMD                  : 14
AND                  : 30
AT                   : 7 8
D                    : 22 40
DM                   : 19
EQUAL                : 10 12
JEQ                  : 42
JGE                  : 43
JGT                  : 41
JLE                  : 46
JLT                  : 44
JMP                  : 47
JNE                  : 45
LPAREN               : 9
M                    : 21 39
MD                   : 18
MINUS                : 29 33 35 37
NOT                  : 32
NUMBER               : 8 36 37
OR                   : 31
PLUS                 : 28 34
RPAREN               : 9
SEMI                 : 10 11
SYMBOL               : 7 9
error                : 

Nonterminals, with rules where they appear

a_instruction        : 4
c_instruction        : 6
comp                 : 10 11 12 13
dest                 : 10 12
empty                : 2
jump                 : 10 11
l_instruction        : 5
num                  : 27 34 35
register             : 26 28 28 29 29 30 30 31 31 32 33 34 35
registerFunc         : 25
registerNum          : 24
registers            : 23
statement            : 1
statements           : 1 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement statements
    (2) statements -> . empty
    (4) statement -> . a_instruction
    (5) statement -> . l_instruction
    (6) statement -> . c_instruction
    (3) empty -> .
    (7) a_instruction -> . AT SYMBOL
    (8) a_instruction -> . AT NUMBER
    (9) l_instruction -> . LPAREN SYMBOL RPAREN
    (10) c_instruction -> . dest EQUAL comp SEMI jump
    (11) c_instruction -> . comp SEMI jump
    (12) c_instruction -> . dest EQUAL comp
    (13) c_instruction -> . comp
    (14) dest -> . AMD
    (15) dest -> . ADM
    (16) dest -> . AD
    (17) dest -> . AM
    (18) dest -> . MD
    (19) dest -> . DM
    (20) dest -> . A
    (21) dest -> . M
    (22) dest -> . D
    (23) comp -> . registers
    (24) comp -> . registerNum
    (25) comp -> . registerFunc
    (26) comp -> . register
    (27) comp -> . num
    (28) registers -> . register PLUS register
    (29) registers -> . register MINUS register
    (30) registers -> . register AND register
    (31) registers -> . register OR register
    (34) registerNum -> . register PLUS num
    (35) registerNum -> . register MINUS num
    (32) registerFunc -> . NOT register
    (33) registerFunc -> . MINUS register
    (38) register -> . A
    (39) register -> . M
    (40) register -> . D
    (36) num -> . NUMBER
    (37) num -> . MINUS NUMBER

    $end            reduce using rule 3 (empty -> .)
    AT              shift and go to state 7
    LPAREN          shift and go to state 9
    AMD             shift and go to state 12
    ADM             shift and go to state 13
    AD              shift and go to state 14
    AM              shift and go to state 15
    MD              shift and go to state 16
    DM              shift and go to state 17
    A               shift and go to state 18
    M               shift and go to state 19
    D               shift and go to state 20
    NOT             shift and go to state 27
    MINUS           shift and go to state 26
    NUMBER          shift and go to state 8

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    a_instruction                  shift and go to state 4
    l_instruction                  shift and go to state 5
    c_instruction                  shift and go to state 6
    dest                           shift and go to state 10
    comp                           shift and go to state 11
    registers                      shift and go to state 21
    registerNum                    shift and go to state 22
    registerFunc                   shift and go to state 23
    register                       shift and go to state 24
    num                            shift and go to state 25

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement . statements
    (1) statements -> . statement statements
    (2) statements -> . empty
    (4) statement -> . a_instruction
    (5) statement -> . l_instruction
    (6) statement -> . c_instruction
    (3) empty -> .
    (7) a_instruction -> . AT SYMBOL
    (8) a_instruction -> . AT NUMBER
    (9) l_instruction -> . LPAREN SYMBOL RPAREN
    (10) c_instruction -> . dest EQUAL comp SEMI jump
    (11) c_instruction -> . comp SEMI jump
    (12) c_instruction -> . dest EQUAL comp
    (13) c_instruction -> . comp
    (14) dest -> . AMD
    (15) dest -> . ADM
    (16) dest -> . AD
    (17) dest -> . AM
    (18) dest -> . MD
    (19) dest -> . DM
    (20) dest -> . A
    (21) dest -> . M
    (22) dest -> . D
    (23) comp -> . registers
    (24) comp -> . registerNum
    (25) comp -> . registerFunc
    (26) comp -> . register
    (27) comp -> . num
    (28) registers -> . register PLUS register
    (29) registers -> . register MINUS register
    (30) registers -> . register AND register
    (31) registers -> . register OR register
    (34) registerNum -> . register PLUS num
    (35) registerNum -> . register MINUS num
    (32) registerFunc -> . NOT register
    (33) registerFunc -> . MINUS register
    (38) register -> . A
    (39) register -> . M
    (40) register -> . D
    (36) num -> . NUMBER
    (37) num -> . MINUS NUMBER

    $end            reduce using rule 3 (empty -> .)
    AT              shift and go to state 7
    LPAREN          shift and go to state 9
    AMD             shift and go to state 12
    ADM             shift and go to state 13
    AD              shift and go to state 14
    AM              shift and go to state 15
    MD              shift and go to state 16
    DM              shift and go to state 17
    A               shift and go to state 18
    M               shift and go to state 19
    D               shift and go to state 20
    NOT             shift and go to state 27
    MINUS           shift and go to state 26
    NUMBER          shift and go to state 8

    statement                      shift and go to state 2
    statements                     shift and go to state 28
    empty                          shift and go to state 3
    a_instruction                  shift and go to state 4
    l_instruction                  shift and go to state 5
    c_instruction                  shift and go to state 6
    dest                           shift and go to state 10
    comp                           shift and go to state 11
    registers                      shift and go to state 21
    registerNum                    shift and go to state 22
    registerFunc                   shift and go to state 23
    register                       shift and go to state 24
    num                            shift and go to state 25

state 3

    (2) statements -> empty .

    $end            reduce using rule 2 (statements -> empty .)


state 4

    (4) statement -> a_instruction .

    AT              reduce using rule 4 (statement -> a_instruction .)
    LPAREN          reduce using rule 4 (statement -> a_instruction .)
    AMD             reduce using rule 4 (statement -> a_instruction .)
    ADM             reduce using rule 4 (statement -> a_instruction .)
    AD              reduce using rule 4 (statement -> a_instruction .)
    AM              reduce using rule 4 (statement -> a_instruction .)
    MD              reduce using rule 4 (statement -> a_instruction .)
    DM              reduce using rule 4 (statement -> a_instruction .)
    A               reduce using rule 4 (statement -> a_instruction .)
    M               reduce using rule 4 (statement -> a_instruction .)
    D               reduce using rule 4 (statement -> a_instruction .)
    NOT             reduce using rule 4 (statement -> a_instruction .)
    MINUS           reduce using rule 4 (statement -> a_instruction .)
    NUMBER          reduce using rule 4 (statement -> a_instruction .)
    $end            reduce using rule 4 (statement -> a_instruction .)


state 5

    (5) statement -> l_instruction .

    AT              reduce using rule 5 (statement -> l_instruction .)
    LPAREN          reduce using rule 5 (statement -> l_instruction .)
    AMD             reduce using rule 5 (statement -> l_instruction .)
    ADM             reduce using rule 5 (statement -> l_instruction .)
    AD              reduce using rule 5 (statement -> l_instruction .)
    AM              reduce using rule 5 (statement -> l_instruction .)
    MD              reduce using rule 5 (statement -> l_instruction .)
    DM              reduce using rule 5 (statement -> l_instruction .)
    A               reduce using rule 5 (statement -> l_instruction .)
    M               reduce using rule 5 (statement -> l_instruction .)
    D               reduce using rule 5 (statement -> l_instruction .)
    NOT             reduce using rule 5 (statement -> l_instruction .)
    MINUS           reduce using rule 5 (statement -> l_instruction .)
    NUMBER          reduce using rule 5 (statement -> l_instruction .)
    $end            reduce using rule 5 (statement -> l_instruction .)


state 6

    (6) statement -> c_instruction .

    AT              reduce using rule 6 (statement -> c_instruction .)
    LPAREN          reduce using rule 6 (statement -> c_instruction .)
    AMD             reduce using rule 6 (statement -> c_instruction .)
    ADM             reduce using rule 6 (statement -> c_instruction .)
    AD              reduce using rule 6 (statement -> c_instruction .)
    AM              reduce using rule 6 (statement -> c_instruction .)
    MD              reduce using rule 6 (statement -> c_instruction .)
    DM              reduce using rule 6 (statement -> c_instruction .)
    A               reduce using rule 6 (statement -> c_instruction .)
    M               reduce using rule 6 (statement -> c_instruction .)
    D               reduce using rule 6 (statement -> c_instruction .)
    NOT             reduce using rule 6 (statement -> c_instruction .)
    MINUS           reduce using rule 6 (statement -> c_instruction .)
    NUMBER          reduce using rule 6 (statement -> c_instruction .)
    $end            reduce using rule 6 (statement -> c_instruction .)


state 7

    (7) a_instruction -> AT . SYMBOL
    (8) a_instruction -> AT . NUMBER

    SYMBOL          shift and go to state 29
    NUMBER          shift and go to state 30


state 8

    (36) num -> NUMBER .

    SEMI            reduce using rule 36 (num -> NUMBER .)
    AT              reduce using rule 36 (num -> NUMBER .)
    LPAREN          reduce using rule 36 (num -> NUMBER .)
    AMD             reduce using rule 36 (num -> NUMBER .)
    ADM             reduce using rule 36 (num -> NUMBER .)
    AD              reduce using rule 36 (num -> NUMBER .)
    AM              reduce using rule 36 (num -> NUMBER .)
    MD              reduce using rule 36 (num -> NUMBER .)
    DM              reduce using rule 36 (num -> NUMBER .)
    A               reduce using rule 36 (num -> NUMBER .)
    M               reduce using rule 36 (num -> NUMBER .)
    D               reduce using rule 36 (num -> NUMBER .)
    NOT             reduce using rule 36 (num -> NUMBER .)
    MINUS           reduce using rule 36 (num -> NUMBER .)
    NUMBER          reduce using rule 36 (num -> NUMBER .)
    $end            reduce using rule 36 (num -> NUMBER .)


state 9

    (9) l_instruction -> LPAREN . SYMBOL RPAREN

    SYMBOL          shift and go to state 31


state 10

    (10) c_instruction -> dest . EQUAL comp SEMI jump
    (12) c_instruction -> dest . EQUAL comp

    EQUAL           shift and go to state 32


state 11

    (11) c_instruction -> comp . SEMI jump
    (13) c_instruction -> comp .

    SEMI            shift and go to state 33
    AT              reduce using rule 13 (c_instruction -> comp .)
    LPAREN          reduce using rule 13 (c_instruction -> comp .)
    AMD             reduce using rule 13 (c_instruction -> comp .)
    ADM             reduce using rule 13 (c_instruction -> comp .)
    AD              reduce using rule 13 (c_instruction -> comp .)
    AM              reduce using rule 13 (c_instruction -> comp .)
    MD              reduce using rule 13 (c_instruction -> comp .)
    DM              reduce using rule 13 (c_instruction -> comp .)
    A               reduce using rule 13 (c_instruction -> comp .)
    M               reduce using rule 13 (c_instruction -> comp .)
    D               reduce using rule 13 (c_instruction -> comp .)
    NOT             reduce using rule 13 (c_instruction -> comp .)
    MINUS           reduce using rule 13 (c_instruction -> comp .)
    NUMBER          reduce using rule 13 (c_instruction -> comp .)
    $end            reduce using rule 13 (c_instruction -> comp .)


state 12

    (14) dest -> AMD .

    EQUAL           reduce using rule 14 (dest -> AMD .)


state 13

    (15) dest -> ADM .

    EQUAL           reduce using rule 15 (dest -> ADM .)


state 14

    (16) dest -> AD .

    EQUAL           reduce using rule 16 (dest -> AD .)


state 15

    (17) dest -> AM .

    EQUAL           reduce using rule 17 (dest -> AM .)


state 16

    (18) dest -> MD .

    EQUAL           reduce using rule 18 (dest -> MD .)


state 17

    (19) dest -> DM .

    EQUAL           reduce using rule 19 (dest -> DM .)


state 18

    (20) dest -> A .
    (38) register -> A .

    EQUAL           reduce using rule 20 (dest -> A .)
    PLUS            reduce using rule 38 (register -> A .)
    MINUS           reduce using rule 38 (register -> A .)
    AND             reduce using rule 38 (register -> A .)
    OR              reduce using rule 38 (register -> A .)
    SEMI            reduce using rule 38 (register -> A .)
    AT              reduce using rule 38 (register -> A .)
    LPAREN          reduce using rule 38 (register -> A .)
    AMD             reduce using rule 38 (register -> A .)
    ADM             reduce using rule 38 (register -> A .)
    AD              reduce using rule 38 (register -> A .)
    AM              reduce using rule 38 (register -> A .)
    MD              reduce using rule 38 (register -> A .)
    DM              reduce using rule 38 (register -> A .)
    A               reduce using rule 38 (register -> A .)
    M               reduce using rule 38 (register -> A .)
    D               reduce using rule 38 (register -> A .)
    NOT             reduce using rule 38 (register -> A .)
    NUMBER          reduce using rule 38 (register -> A .)
    $end            reduce using rule 38 (register -> A .)


state 19

    (21) dest -> M .
    (39) register -> M .

    EQUAL           reduce using rule 21 (dest -> M .)
    PLUS            reduce using rule 39 (register -> M .)
    MINUS           reduce using rule 39 (register -> M .)
    AND             reduce using rule 39 (register -> M .)
    OR              reduce using rule 39 (register -> M .)
    SEMI            reduce using rule 39 (register -> M .)
    AT              reduce using rule 39 (register -> M .)
    LPAREN          reduce using rule 39 (register -> M .)
    AMD             reduce using rule 39 (register -> M .)
    ADM             reduce using rule 39 (register -> M .)
    AD              reduce using rule 39 (register -> M .)
    AM              reduce using rule 39 (register -> M .)
    MD              reduce using rule 39 (register -> M .)
    DM              reduce using rule 39 (register -> M .)
    A               reduce using rule 39 (register -> M .)
    M               reduce using rule 39 (register -> M .)
    D               reduce using rule 39 (register -> M .)
    NOT             reduce using rule 39 (register -> M .)
    NUMBER          reduce using rule 39 (register -> M .)
    $end            reduce using rule 39 (register -> M .)


state 20

    (22) dest -> D .
    (40) register -> D .

    EQUAL           reduce using rule 22 (dest -> D .)
    PLUS            reduce using rule 40 (register -> D .)
    MINUS           reduce using rule 40 (register -> D .)
    AND             reduce using rule 40 (register -> D .)
    OR              reduce using rule 40 (register -> D .)
    SEMI            reduce using rule 40 (register -> D .)
    AT              reduce using rule 40 (register -> D .)
    LPAREN          reduce using rule 40 (register -> D .)
    AMD             reduce using rule 40 (register -> D .)
    ADM             reduce using rule 40 (register -> D .)
    AD              reduce using rule 40 (register -> D .)
    AM              reduce using rule 40 (register -> D .)
    MD              reduce using rule 40 (register -> D .)
    DM              reduce using rule 40 (register -> D .)
    A               reduce using rule 40 (register -> D .)
    M               reduce using rule 40 (register -> D .)
    D               reduce using rule 40 (register -> D .)
    NOT             reduce using rule 40 (register -> D .)
    NUMBER          reduce using rule 40 (register -> D .)
    $end            reduce using rule 40 (register -> D .)


state 21

    (23) comp -> registers .

    SEMI            reduce using rule 23 (comp -> registers .)
    AT              reduce using rule 23 (comp -> registers .)
    LPAREN          reduce using rule 23 (comp -> registers .)
    AMD             reduce using rule 23 (comp -> registers .)
    ADM             reduce using rule 23 (comp -> registers .)
    AD              reduce using rule 23 (comp -> registers .)
    AM              reduce using rule 23 (comp -> registers .)
    MD              reduce using rule 23 (comp -> registers .)
    DM              reduce using rule 23 (comp -> registers .)
    A               reduce using rule 23 (comp -> registers .)
    M               reduce using rule 23 (comp -> registers .)
    D               reduce using rule 23 (comp -> registers .)
    NOT             reduce using rule 23 (comp -> registers .)
    MINUS           reduce using rule 23 (comp -> registers .)
    NUMBER          reduce using rule 23 (comp -> registers .)
    $end            reduce using rule 23 (comp -> registers .)


state 22

    (24) comp -> registerNum .

    SEMI            reduce using rule 24 (comp -> registerNum .)
    AT              reduce using rule 24 (comp -> registerNum .)
    LPAREN          reduce using rule 24 (comp -> registerNum .)
    AMD             reduce using rule 24 (comp -> registerNum .)
    ADM             reduce using rule 24 (comp -> registerNum .)
    AD              reduce using rule 24 (comp -> registerNum .)
    AM              reduce using rule 24 (comp -> registerNum .)
    MD              reduce using rule 24 (comp -> registerNum .)
    DM              reduce using rule 24 (comp -> registerNum .)
    A               reduce using rule 24 (comp -> registerNum .)
    M               reduce using rule 24 (comp -> registerNum .)
    D               reduce using rule 24 (comp -> registerNum .)
    NOT             reduce using rule 24 (comp -> registerNum .)
    MINUS           reduce using rule 24 (comp -> registerNum .)
    NUMBER          reduce using rule 24 (comp -> registerNum .)
    $end            reduce using rule 24 (comp -> registerNum .)


state 23

    (25) comp -> registerFunc .

    SEMI            reduce using rule 25 (comp -> registerFunc .)
    AT              reduce using rule 25 (comp -> registerFunc .)
    LPAREN          reduce using rule 25 (comp -> registerFunc .)
    AMD             reduce using rule 25 (comp -> registerFunc .)
    ADM             reduce using rule 25 (comp -> registerFunc .)
    AD              reduce using rule 25 (comp -> registerFunc .)
    AM              reduce using rule 25 (comp -> registerFunc .)
    MD              reduce using rule 25 (comp -> registerFunc .)
    DM              reduce using rule 25 (comp -> registerFunc .)
    A               reduce using rule 25 (comp -> registerFunc .)
    M               reduce using rule 25 (comp -> registerFunc .)
    D               reduce using rule 25 (comp -> registerFunc .)
    NOT             reduce using rule 25 (comp -> registerFunc .)
    MINUS           reduce using rule 25 (comp -> registerFunc .)
    NUMBER          reduce using rule 25 (comp -> registerFunc .)
    $end            reduce using rule 25 (comp -> registerFunc .)


state 24

    (26) comp -> register .
    (28) registers -> register . PLUS register
    (29) registers -> register . MINUS register
    (30) registers -> register . AND register
    (31) registers -> register . OR register
    (34) registerNum -> register . PLUS num
    (35) registerNum -> register . MINUS num

  ! shift/reduce conflict for MINUS resolved as shift
    SEMI            reduce using rule 26 (comp -> register .)
    AT              reduce using rule 26 (comp -> register .)
    LPAREN          reduce using rule 26 (comp -> register .)
    AMD             reduce using rule 26 (comp -> register .)
    ADM             reduce using rule 26 (comp -> register .)
    AD              reduce using rule 26 (comp -> register .)
    AM              reduce using rule 26 (comp -> register .)
    MD              reduce using rule 26 (comp -> register .)
    DM              reduce using rule 26 (comp -> register .)
    A               reduce using rule 26 (comp -> register .)
    M               reduce using rule 26 (comp -> register .)
    D               reduce using rule 26 (comp -> register .)
    NOT             reduce using rule 26 (comp -> register .)
    NUMBER          reduce using rule 26 (comp -> register .)
    $end            reduce using rule 26 (comp -> register .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37

  ! MINUS           [ reduce using rule 26 (comp -> register .) ]


state 25

    (27) comp -> num .

    SEMI            reduce using rule 27 (comp -> num .)
    AT              reduce using rule 27 (comp -> num .)
    LPAREN          reduce using rule 27 (comp -> num .)
    AMD             reduce using rule 27 (comp -> num .)
    ADM             reduce using rule 27 (comp -> num .)
    AD              reduce using rule 27 (comp -> num .)
    AM              reduce using rule 27 (comp -> num .)
    MD              reduce using rule 27 (comp -> num .)
    DM              reduce using rule 27 (comp -> num .)
    A               reduce using rule 27 (comp -> num .)
    M               reduce using rule 27 (comp -> num .)
    D               reduce using rule 27 (comp -> num .)
    NOT             reduce using rule 27 (comp -> num .)
    MINUS           reduce using rule 27 (comp -> num .)
    NUMBER          reduce using rule 27 (comp -> num .)
    $end            reduce using rule 27 (comp -> num .)


state 26

    (33) registerFunc -> MINUS . register
    (37) num -> MINUS . NUMBER
    (38) register -> . A
    (39) register -> . M
    (40) register -> . D

    NUMBER          shift and go to state 39
    A               shift and go to state 40
    M               shift and go to state 41
    D               shift and go to state 42

    register                       shift and go to state 38

state 27

